# ipcgull

./: .gitignore  CMakeLists.txt  README.md
src/: common_gdbus.cpp  common_gdbus.h  exception.cpp  function.cpp  interface.cpp  node.cpp  property.cpp  server_gdbus.cpp  server_stub.cpp  signal.cpp
src/include/ipcgull/: connection.h  exception.h  function.h  interface.h  node.h  property.h  server.h  signal.h  variant.h
tests/server_test/: CMakeLists.txt  main.cpp
